force-app/main/default/objects/NativeForms_Config__c/NativeForms_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NativeForms Config</label>
</CustomObject>