force-app/main/default/objects/NativeForms_Config__c/fields/Captcha_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Captcha_Secret_Key__c</fullName>
    <description>Google reCAPTCHA secret key used by the TwinaForms submit runtime for server-side verification.</description>
    <inlineHelpText>Paste the Google reCAPTCHA secret key used to verify submit tokens on the server.</inlineHelpText>
    <label>CAPTCHA Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>