force-app/main/default/objects/NativeForms_Config__c/fields/Captcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Captcha_Site_Key__c</fullName>
    <description>Google reCAPTCHA site key used by published TwinaForms HTML pages.</description>
    <inlineHelpText>Paste the Google reCAPTCHA site key that should be rendered on published forms.</inlineHelpText>
    <label>CAPTCHA Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>