force-app/main/default/objects/NativeForms_Config__c/fields/Demo_Data_Installed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Data_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the packaged NativeForms demo data has been installed for this org.</description>
    <inlineHelpText>Set automatically when the demo-data installer completes.</inlineHelpText>
    <label>Demo Data Installed</label>
    <type>Checkbox</type>
</CustomField>