force-app/main/default/objects/NativeForms_Config__c/fields/Demo_Data_Installed_At__c.field-meta.xml
<CustomField>
    <fullName>Demo_Data_Installed_At__c</fullName>
    <description>Timestamp of the last successful NativeForms demo data installation.</description>
    <inlineHelpText>Updated automatically after demo records are installed.</inlineHelpText>
    <label>Demo Data Installed At</label>
    <type>DateTime</type>
</CustomField>