force-app/main/default/objects/NativeForms_Config__c/fields/Demo_Data_Last_Message__c.field-meta.xml
<CustomField>
    <fullName>Demo_Data_Last_Message__c</fullName>
    <description>Last status message produced by the TwinaForms demo data installer.</description>
    <inlineHelpText>Stores the latest success or informational message from demo-data setup.</inlineHelpText>
    <label>Demo Data Last Message</label>
    <type>TextArea</type>
</CustomField>