force-app/main/default/objects/NativeForms_Config__c/fields/Demo_Data_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Demo_Data_Record_Ids__c</fullName>
    <description>Serialized JSON of record ids created by the NativeForms demo data installer.</description>
    <inlineHelpText>Used internally for demo-data tracking and future cleanup/reset support.</inlineHelpText>
    <label>Demo Data Record Ids</label>
    <type>TextArea</type>
</CustomField>