force-app/main/default/objects/NativeForms_Config__c/fields/Demo_Data_Version__c.field-meta.xml
<CustomField>
    <fullName>Demo_Data_Version__c</fullName>
    <description>Version tag for the currently installed TwinaForms demo data bundle.</description>
    <inlineHelpText>Updated automatically so future installs can detect whether demo data is already current.</inlineHelpText>
    <label>Demo Data Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>