force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Advanced_Submit_Modes__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Advanced_Submit_Modes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pro Advanced Submit Modes</label>
    <type>Checkbox</type>
</CustomField>