force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Condition_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Pro condition builder with numbered rows and custom logic expressions.</description>
    <label>Enable Pro Condition Logic</label>
    <type>Checkbox</type>
</CustomField>