force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Formula_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pro Formula Fields</label>
    <type>Checkbox</type>
</CustomField>