force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Load_File__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Load_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy local toggle for the Pro file uploads feature. AWS plan entitlements remain the runtime source of truth.</description>
    <inlineHelpText>Legacy local toggle for file uploads. Public runtime entitlement should come from AWS plan data using enableProLoadFile.</inlineHelpText>
    <label>Enable Pro File Uploads</label>
    <type>Checkbox</type>
</CustomField>