force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Post_Submit_Auto_Link__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Post_Submit_Auto_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Pro-only post-submit auto link / redirect feature.</description>
    <inlineHelpText>Enable the Pro-only automatic post-submit next-step link behavior.</inlineHelpText>
    <label>Enable Pro Post Submit Auto Link</label>
    <type>Checkbox</type>
</CustomField>