force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Prefill_Alias_References__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Prefill_Alias_References__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pro Prefill Alias References</label>
    <type>Checkbox</type>
</CustomField>