force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_Repeat_Groups__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_Repeat_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pro Repeat Groups</label>
    <type>Checkbox</type>
</CustomField>