force-app/main/default/objects/NativeForms_Config__c/fields/Enable_Pro_User_Verification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pro_User_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the Pro feature for email-based User Verification.</description>
    <inlineHelpText>Enable the Pro feature for Salesforce-side User Verification.</inlineHelpText>
    <label>Enable Pro User Verification</label>
    <type>Checkbox</type>
</CustomField>