force-app/main/default/objects/NativeForms_Config__c/fields/Submission_Log_Key__c.field-meta.xml
<CustomField>
    <fullName>Submission_Log_Key__c</fullName>
    <description>Base64-encoded AES-256 key used for NativeForms submission-log encryption compatibility between Salesforce and AWS.</description>
    <inlineHelpText>Paste a base64-encoded 32-byte AES key. NativeForms uses this key to encrypt detailed submission logs before saving them in AWS.</inlineHelpText>
    <label>Submission Log Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>